Show/hide links when share is clicked

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link rel="stylesheet" href="./styles/styles.css" />
     <link
       rel="icon"
@@ -55,7 +54,7 @@
             </button>
           </div>
 
-          <div class="profile-links">
+          <div class="profile-links hidden">
             <div class="links">
               <p>Share</p>
               <img src="./images/icon-facebook.svg" alt="facebook-icon" />
@@ -79,8 +78,11 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://github.com/SubagaS" target="_blank">Subaga Sreepathy</a
+        >.
       </div>
     </footer>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
